<?xml version="1.0"?>
<package>
    <name>pb_ros</name>
    <version>2.0.0</version>
    <description>
        ROS wrapper for UR5 in pybullet simulator
    </description>

    <license>MIT</license>

    <author email="amruta@iitk.ac.in">Amrut Panda</author>
    <maintainer email="amruta@iitk.ac.in">Amrut Panda</maintainer>

    <buildtool_depend>catkin</buildtool_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>urdf</run_depend>
    <run_depend>xacro</run_depend>
    <run_depend>robot_state_publisher</run_depend>

<!--    <run_depend>cv_bridge</run_depend>-->
<!--    <run_depend>joint_state_publisher_gui</run_depend>-->

</package>
